testoldcopy/force-app/main/default/objects/QBO_Log__c/QBO_Log__c.object-meta.xml
<CustomObject>
    <label>QuickBook Log</label>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBook Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>