testoldcopy/force-app/main/default/objects/QBO_Log__c/fields/QBO_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>QBO_Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>TextArea</type>
</CustomField>