testoldcopy/force-app/main/default/objects/QBO_Log__c/fields/QBO_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>QBO_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>